// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`navigation renders app if show disclaimer is false 1`] = `
<View
  style={
    Object {
      "backgroundColor": "white",
      "flex": 1,
    }
  }
>
  <RNCSafeAreaView
    onInsetsChange={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "overflow": "hidden",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          collapsable={false}
          pointerEvents="auto"
          removeClippedSubviews={false}
          style={
            Array [
              Object {
                "flex": 1,
                "overflow": "hidden",
              },
              null,
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
        >
          <View
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <View
              accessibilityElementsHidden={false}
              importantForAccessibility="auto"
              style={
                Array [
                  Object {
                    "flex": 1,
                  },
                  Object {
                    "backgroundColor": "rgb(242, 242, 242)",
                  },
                ]
              }
            >
              <View
                style={
                  Object {
                    "flex": 1,
                  }
                }
              >
                <View
                  onLayout={[Function]}
                  style={
                    Object {
                      "flex": 1,
                    }
                  }
                >
                  <View
                    pointerEvents="box-none"
                    style={
                      Object {
                        "bottom": 0,
                        "left": 0,
                        "position": "absolute",
                        "right": 0,
                        "top": 0,
                      }
                    }
                  >
                    <View
                      accessibilityElementsHidden={false}
                      closing={false}
                      gestureVelocityImpact={0.3}
                      importantForAccessibility="auto"
                      onClose={[Function]}
                      onGestureBegin={[Function]}
                      onGestureCanceled={[Function]}
                      onOpen={[Function]}
                      onTransitionStart={[Function]}
                      pointerEvents="box-none"
                      style={
                        Object {
                          "bottom": 0,
                          "left": 0,
                          "position": "absolute",
                          "right": 0,
                          "top": 0,
                        }
                      }
                      transitionSpec={
                        Object {
                          "close": Object {
                            "animation": "spring",
                            "config": Object {
                              "damping": 500,
                              "mass": 3,
                              "overshootClamping": true,
                              "restDisplacementThreshold": 0.01,
                              "restSpeedThreshold": 0.01,
                              "stiffness": 1000,
                            },
                          },
                          "open": Object {
                            "animation": "spring",
                            "config": Object {
                              "damping": 500,
                              "mass": 3,
                              "overshootClamping": true,
                              "restDisplacementThreshold": 0.01,
                              "restSpeedThreshold": 0.01,
                              "stiffness": 1000,
                            },
                          },
                        }
                      }
                    >
                      <View
                        pointerEvents="box-none"
                        style={
                          Object {
                            "flex": 1,
                            "marginTop": 64,
                          }
                        }
                      >
                        <View
                          collapsable={false}
                          onGestureHandlerEvent={[Function]}
                          onGestureHandlerStateChange={[Function]}
                          style={
                            Object {
                              "flex": 1,
                              "transform": Array [
                                Object {
                                  "translateX": 0,
                                },
                                Object {
                                  "translateX": 0,
                                },
                              ],
                            }
                          }
                        >
                          <View
                            pointerEvents="none"
                            style={
                              Object {
                                "backgroundColor": "rgb(242, 242, 242)",
                                "bottom": 0,
                                "left": 0,
                                "position": "absolute",
                                "shadowColor": "#000",
                                "shadowOffset": Object {
                                  "height": 1,
                                  "width": -1,
                                },
                                "shadowOpacity": 0.3,
                                "shadowRadius": 5,
                                "top": 0,
                                "width": 3,
                              }
                            }
                          />
                          <View
                            style={
                              Array [
                                Object {
                                  "flex": 1,
                                  "overflow": "hidden",
                                },
                                Array [
                                  Object {
                                    "backgroundColor": "rgb(242, 242, 242)",
                                  },
                                  undefined,
                                ],
                              ]
                            }
                          >
                            <View
                              style={
                                Object {
                                  "flex": 1,
                                  "flexDirection": "column-reverse",
                                }
                              }
                            >
                              <View
                                style={
                                  Object {
                                    "flex": 1,
                                  }
                                }
                              >
                                <View
                                  style={
                                    Object {
                                      "flex": 1,
                                    }
                                  }
                                >
                                  <RCTScrollView
                                    contentContainerStyle={
                                      Object {
                                        "flexGrow": 1,
                                      }
                                    }
                                  >
                                    <View>
                                      <View
                                        style={
                                          Object {
                                            "alignItems": "center",
                                            "backgroundColor": "white",
                                            "flex": 1,
                                            "paddingBottom": 70,
                                          }
                                        }
                                      >
                                        <View
                                          style={
                                            Object {
                                              "height": 100,
                                              "justifyContent": "center",
                                            }
                                          }
                                        >
                                          <View
                                            style={Object {}}
                                          >
                                            <View
                                              style={
                                                Object {
                                                  "alignItems": "center",
                                                }
                                              }
                                            >
                                              <Text
                                                style={
                                                  Object {
                                                    "color": "#3e4b57",
                                                    "fontFamily": "tit-light",
                                                    "fontSize": 40,
                                                    "height": 60,
                                                    "opacity": 1,
                                                    "textAlignVertical": "center",
                                                    "textTransform": "lowercase",
                                                  }
                                                }
                                              >
                                                tap to begin
                                              </Text>
                                            </View>
                                          </View>
                                        </View>
                                        <View
                                          style={
                                            Object {
                                              "alignItems": "center",
                                              "justifyContent": "center",
                                              "width": "100%",
                                            }
                                          }
                                        >
                                          <View
                                            accessible={true}
                                            focusable={true}
                                            isTVSelectable={true}
                                            onClick={[Function]}
                                            onResponderGrant={[Function]}
                                            onResponderMove={[Function]}
                                            onResponderRelease={[Function]}
                                            onResponderTerminate={[Function]}
                                            onResponderTerminationRequest={[Function]}
                                            onStartShouldSetResponder={[Function]}
                                            style={
                                              Object {
                                                "alignItems": "center",
                                                "borderColor": "#002f56",
                                                "borderRadius": 120,
                                                "borderWidth": 4,
                                                "height": 120,
                                                "justifyContent": "center",
                                                "opacity": 1,
                                                "width": 120,
                                              }
                                            }
                                          >
                                            <Text
                                              allowFontScaling={false}
                                              style={
                                                Array [
                                                  Object {
                                                    "color": undefined,
                                                    "fontSize": 60,
                                                  },
                                                  Object {
                                                    "color": "#002f56",
                                                  },
                                                  Object {
                                                    "fontFamily": "material-community",
                                                    "fontStyle": "normal",
                                                    "fontWeight": "normal",
                                                  },
                                                  Object {},
                                                ]
                                              }
                                            >
                                              
                                            </Text>
                                          </View>
                                        </View>
                                        <Text
                                          style={
                                            Object {
                                              "color": "#3e4b57",
                                              "fontFamily": "tit-light",
                                              "fontSize": 20,
                                              "marginTop": 10,
                                              "opacity": 1,
                                            }
                                          }
                                        >
                                          selected level: 2
                                        </Text>
                                        <View
                                          style={
                                            Object {
                                              "alignItems": "center",
                                              "justifyContent": "center",
                                              "paddingBottom": 10,
                                              "paddingTop": 20,
                                              "width": "90%",
                                            }
                                          }
                                        >
                                          <Text
                                            style={
                                              Object {
                                                "color": "#00b8bb",
                                                "fontFamily": "tit-regular",
                                                "fontSize": 22,
                                                "paddingBottom": 5,
                                              }
                                            }
                                          >
                                            Strength Level I
                                          </Text>
                                          <View
                                            style={
                                              Object {
                                                "alignItems": "center",
                                                "flexDirection": "row",
                                                "justifyContent": "space-around",
                                              }
                                            }
                                          >
                                            <Text
                                              style={
                                                Object {
                                                  "borderRightColor": "#CCC",
                                                  "borderRightWidth": 1,
                                                  "color": "#3e4b57",
                                                  "fontFamily": "tit-light",
                                                  "fontSize": 17,
                                                  "opacity": 1,
                                                  "paddingHorizontal": 10,
                                                  "paddingTop": 5,
                                                  "textAlign": "right",
                                                  "width": "50%",
                                                }
                                              }
                                            >
                                              inhale & exhale
                                            </Text>
                                            <Text
                                              style={
                                                Object {
                                                  "color": "#3e4b57",
                                                  "fontFamily": "tit-light",
                                                  "fontSize": 17,
                                                  "opacity": 1,
                                                  "paddingHorizontal": 10,
                                                  "paddingTop": 5,
                                                  "width": "50%",
                                                }
                                              }
                                            >
                                              10 times
                                            </Text>
                                          </View>
                                          <View
                                            style={
                                              Object {
                                                "alignItems": "center",
                                                "flexDirection": "row",
                                                "justifyContent": "space-around",
                                              }
                                            }
                                          >
                                            <Text
                                              style={
                                                Object {
                                                  "borderRightColor": "#CCC",
                                                  "borderRightWidth": 1,
                                                  "color": "#3e4b57",
                                                  "fontFamily": "tit-light",
                                                  "fontSize": 17,
                                                  "opacity": 1,
                                                  "paddingHorizontal": 10,
                                                  "paddingTop": 5,
                                                  "textAlign": "right",
                                                  "width": "50%",
                                                }
                                              }
                                            >
                                              rest for
                                            </Text>
                                            <Text
                                              style={
                                                Object {
                                                  "color": "#3e4b57",
                                                  "fontFamily": "tit-light",
                                                  "fontSize": 17,
                                                  "opacity": 1,
                                                  "paddingHorizontal": 10,
                                                  "paddingTop": 5,
                                                  "width": "50%",
                                                }
                                              }
                                            >
                                              60 seconds
                                            </Text>
                                          </View>
                                          <View
                                            style={
                                              Object {
                                                "alignItems": "center",
                                                "flexDirection": "row",
                                                "justifyContent": "space-around",
                                              }
                                            }
                                          >
                                            <Text
                                              style={
                                                Object {
                                                  "borderRightColor": "#CCC",
                                                  "borderRightWidth": 1,
                                                  "color": "#3e4b57",
                                                  "fontFamily": "tit-light",
                                                  "fontSize": 17,
                                                  "opacity": 1,
                                                  "paddingHorizontal": 10,
                                                  "paddingTop": 5,
                                                  "textAlign": "right",
                                                  "width": "50%",
                                                }
                                              }
                                            >
                                              rounds
                                            </Text>
                                            <Text
                                              style={
                                                Object {
                                                  "color": "#3e4b57",
                                                  "fontFamily": "tit-light",
                                                  "fontSize": 17,
                                                  "opacity": 1,
                                                  "paddingHorizontal": 10,
                                                  "paddingTop": 5,
                                                  "width": "50%",
                                                }
                                              }
                                            >
                                              4
                                            </Text>
                                          </View>
                                        </View>
                                        <View
                                          style={
                                            Object {
                                              "alignItems": "center",
                                              "marginTop": 20,
                                              "width": "100%",
                                            }
                                          }
                                        />
                                      </View>
                                    </View>
                                  </RCTScrollView>
                                </View>
                              </View>
                            </View>
                          </View>
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
                <View
                  pointerEvents="box-none"
                  style={
                    Object {
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    }
                  }
                >
                  <View
                    accessibilityElementsHidden={false}
                    importantForAccessibility="auto"
                    onLayout={[Function]}
                    pointerEvents="box-none"
                    style={null}
                  >
                    <View
                      pointerEvents="none"
                      style={
                        Object {
                          "bottom": 0,
                          "left": 0,
                          "opacity": 1,
                          "position": "absolute",
                          "right": 0,
                          "top": 0,
                        }
                      }
                    >
                      <View
                        style={
                          Object {
                            "backgroundColor": "#005bbb",
                            "borderBottomColor": "#CCC",
                            "borderBottomWidth": 1,
                            "flex": 1,
                            "shadowColor": "transparent",
                            "shadowOffset": 0,
                            "shadowOpacity": 0,
                            "shadowRadius": 0,
                          }
                        }
                      />
                    </View>
                    <View
                      pointerEvents="box-none"
                      style={
                        Object {
                          "height": 64,
                          "maxHeight": undefined,
                          "minHeight": undefined,
                          "opacity": undefined,
                          "transform": undefined,
                        }
                      }
                    >
                      <View
                        pointerEvents="none"
                        style={
                          Object {
                            "height": 20,
                          }
                        }
                      />
                      <View
                        pointerEvents="box-none"
                        style={
                          Object {
                            "alignItems": "center",
                            "flex": 1,
                            "flexDirection": "row",
                            "justifyContent": "center",
                          }
                        }
                      >
                        <View
                          pointerEvents="box-none"
                          style={
                            Object {
                              "marginHorizontal": 16,
                              "opacity": 1,
                            }
                          }
                        >
                          <View
                            style={
                              Object {
                                "flexDirection": "row",
                              }
                            }
                          >
                            <Text
                              style={
                                Object {
                                  "backgroundColor": "white",
                                  "color": "#005bbb",
                                  "fontFamily": "tit-regular",
                                  "fontSize": 20,
                                  "opacity": 1,
                                }
                              }
                            >
                              PulmO
                            </Text>
                            <View
                              style={
                                Object {
                                  "top": 5,
                                }
                              }
                            >
                              <Text
                                style={
                                  Object {
                                    "backgroundColor": "white",
                                    "color": "#005bbb",
                                    "fontFamily": "tit-regular",
                                    "fontSize": 18,
                                    "opacity": 1,
                                  }
                                }
                              >
                                2
                              </Text>
                            </View>
                          </View>
                        </View>
                        <View
                          pointerEvents="box-none"
                          style={
                            Object {
                              "alignItems": "flex-end",
                              "bottom": 0,
                              "justifyContent": "center",
                              "opacity": 1,
                              "position": "absolute",
                              "right": 0,
                              "top": 0,
                            }
                          }
                        >
                          <View
                            style={
                              Array [
                                Object {
                                  "flexDirection": "row",
                                  "justifyContent": "center",
                                },
                                Object {
                                  "marginRight": 5,
                                },
                              ]
                            }
                          >
                            <View>
                              <View
                                accessible={true}
                                focusable={true}
                                hitSlop={
                                  Object {
                                    "bottom": 5,
                                    "left": 5,
                                    "right": 5,
                                    "top": 5,
                                  }
                                }
                                isTVSelectable={true}
                                onClick={[Function]}
                                onResponderGrant={[Function]}
                                onResponderMove={[Function]}
                                onResponderRelease={[Function]}
                                onResponderTerminate={[Function]}
                                onResponderTerminationRequest={[Function]}
                                onStartShouldSetResponder={[Function]}
                                style={
                                  Object {
                                    "alignItems": "center",
                                    "justifyContent": "center",
                                    "opacity": 1,
                                  }
                                }
                              >
                                <View>
                                  <Text
                                    allowFontScaling={false}
                                    style={
                                      Array [
                                        Object {
                                          "color": "white",
                                          "fontSize": 23,
                                        },
                                        Object {
                                          "marginHorizontal": 11,
                                        },
                                        Object {
                                          "fontFamily": "material-community",
                                          "fontStyle": "normal",
                                          "fontWeight": "normal",
                                        },
                                        Object {},
                                      ]
                                    }
                                  >
                                    
                                  </Text>
                                </View>
                              </View>
                            </View>
                          </View>
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        pointerEvents="auto"
        style={
          Object {
            "backgroundColor": "rgb(255, 255, 255)",
            "borderTopColor": "rgb(224, 224, 224)",
            "borderTopWidth": 0.5,
            "bottom": 0,
            "elevation": 8,
            "height": 50,
            "left": 0,
            "paddingBottom": 0,
            "paddingHorizontal": 0,
            "position": null,
            "right": 0,
            "transform": Array [
              Object {
                "translateY": 0,
              },
            ],
          }
        }
      >
        <View
          onLayout={[Function]}
          style={
            Object {
              "flex": 1,
              "flexDirection": "row",
            }
          }
        >
          <View
            accessibilityLabel="Excercises, tab, 1 of 3"
            accessibilityRole="button"
            accessibilityStates={Array []}
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flex": 1,
                },
                Object {
                  "backgroundColor": "transparent",
                },
                Object {
                  "flexDirection": "column",
                  "justifyContent": "flex-end",
                },
                Object {
                  "backgroundColor": "#005bbb",
                },
              ]
            }
          >
            <View
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "alignSelf": "center",
                      "height": "100%",
                      "justifyContent": "center",
                      "minWidth": 25,
                      "position": "absolute",
                      "width": "100%",
                    },
                    Object {
                      "opacity": 0,
                    },
                  ]
                }
              >
                <Text
                  allowFontScaling={false}
                  style={
                    Array [
                      Object {
                        "color": "white",
                        "fontSize": 26,
                      },
                      undefined,
                      Object {
                        "fontFamily": "material-community",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      Object {},
                    ]
                  }
                >
                  
                </Text>
              </View>
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "alignSelf": "center",
                      "height": "100%",
                      "justifyContent": "center",
                      "minWidth": 25,
                      "position": "absolute",
                      "width": "100%",
                    },
                    Object {
                      "opacity": 1,
                    },
                  ]
                }
              >
                <Text
                  allowFontScaling={false}
                  style={
                    Array [
                      Object {
                        "color": "#002f56",
                        "fontSize": 26,
                      },
                      undefined,
                      Object {
                        "fontFamily": "material-community",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      Object {},
                    ]
                  }
                >
                  
                </Text>
              </View>
            </View>
            <Text
              allowFontScaling={false}
              numberOfLines={1}
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "textAlign": "center",
                  },
                  Object {
                    "color": "#002f56",
                  },
                  Object {
                    "fontSize": 11,
                    "marginBottom": 1.5,
                  },
                  Object {
                    "fontFamily": "tit-regular",
                    "fontSize": 12,
                  },
                ]
              }
            >
              Excercises
            </Text>
          </View>
          <View
            accessibilityLabel="Home, tab, 2 of 3"
            accessibilityRole="button"
            accessibilityStates={
              Array [
                "selected",
              ]
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flex": 1,
                },
                Object {
                  "backgroundColor": "transparent",
                },
                Object {
                  "flexDirection": "column",
                  "justifyContent": "flex-end",
                },
                Object {
                  "backgroundColor": "#005bbb",
                },
              ]
            }
          >
            <View
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "alignSelf": "center",
                      "height": "100%",
                      "justifyContent": "center",
                      "minWidth": 25,
                      "position": "absolute",
                      "width": "100%",
                    },
                    Object {
                      "opacity": 1,
                    },
                  ]
                }
              >
                <Text
                  allowFontScaling={false}
                  style={
                    Array [
                      Object {
                        "color": "white",
                        "fontSize": 26,
                      },
                      undefined,
                      Object {
                        "fontFamily": "material-community",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      Object {},
                    ]
                  }
                >
                  
                </Text>
              </View>
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "alignSelf": "center",
                      "height": "100%",
                      "justifyContent": "center",
                      "minWidth": 25,
                      "position": "absolute",
                      "width": "100%",
                    },
                    Object {
                      "opacity": 0,
                    },
                  ]
                }
              >
                <Text
                  allowFontScaling={false}
                  style={
                    Array [
                      Object {
                        "color": "#002f56",
                        "fontSize": 26,
                      },
                      undefined,
                      Object {
                        "fontFamily": "material-community",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      Object {},
                    ]
                  }
                >
                  
                </Text>
              </View>
            </View>
            <Text
              allowFontScaling={false}
              numberOfLines={1}
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "textAlign": "center",
                  },
                  Object {
                    "color": "white",
                  },
                  Object {
                    "fontSize": 11,
                    "marginBottom": 1.5,
                  },
                  Object {
                    "fontFamily": "tit-regular",
                    "fontSize": 12,
                  },
                ]
              }
            >
              Home
            </Text>
          </View>
          <View
            accessibilityLabel="Profile, tab, 3 of 3"
            accessibilityRole="button"
            accessibilityStates={Array []}
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flex": 1,
                },
                Object {
                  "backgroundColor": "transparent",
                },
                Object {
                  "flexDirection": "column",
                  "justifyContent": "flex-end",
                },
                Object {
                  "backgroundColor": "#005bbb",
                },
              ]
            }
          >
            <View
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "alignSelf": "center",
                      "height": "100%",
                      "justifyContent": "center",
                      "minWidth": 25,
                      "position": "absolute",
                      "width": "100%",
                    },
                    Object {
                      "opacity": 0,
                    },
                  ]
                }
              >
                <Text
                  allowFontScaling={false}
                  style={
                    Array [
                      Object {
                        "color": "white",
                        "fontSize": 26,
                      },
                      undefined,
                      Object {
                        "fontFamily": "material-community",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      Object {},
                    ]
                  }
                >
                  
                </Text>
              </View>
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "alignSelf": "center",
                      "height": "100%",
                      "justifyContent": "center",
                      "minWidth": 25,
                      "position": "absolute",
                      "width": "100%",
                    },
                    Object {
                      "opacity": 1,
                    },
                  ]
                }
              >
                <Text
                  allowFontScaling={false}
                  style={
                    Array [
                      Object {
                        "color": "#002f56",
                        "fontSize": 26,
                      },
                      undefined,
                      Object {
                        "fontFamily": "material-community",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      Object {},
                    ]
                  }
                >
                  
                </Text>
              </View>
            </View>
            <Text
              allowFontScaling={false}
              numberOfLines={1}
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "textAlign": "center",
                  },
                  Object {
                    "color": "#002f56",
                  },
                  Object {
                    "fontSize": 11,
                    "marginBottom": 1.5,
                  },
                  Object {
                    "fontFamily": "tit-regular",
                    "fontSize": 12,
                  },
                ]
              }
            >
              Profile
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RNCSafeAreaView>
</View>
`;

exports[`navigation renders disclaimer if show disclaimer is true 1`] = `
<View
  style={
    Object {
      "backgroundColor": "white",
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <RNCSafeAreaView
      onInsetsChange={[Function]}
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        onLayout={[Function]}
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          pointerEvents="box-none"
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View
            accessibilityElementsHidden={false}
            closing={false}
            gestureVelocityImpact={0.3}
            importantForAccessibility="auto"
            onClose={[Function]}
            onGestureBegin={[Function]}
            onGestureCanceled={[Function]}
            onOpen={[Function]}
            onTransitionStart={[Function]}
            pointerEvents="box-none"
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
            transitionSpec={
              Object {
                "close": Object {
                  "animation": "spring",
                  "config": Object {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 0.01,
                    "restSpeedThreshold": 0.01,
                    "stiffness": 1000,
                  },
                },
                "open": Object {
                  "animation": "spring",
                  "config": Object {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 0.01,
                    "restSpeedThreshold": 0.01,
                    "stiffness": 1000,
                  },
                },
              }
            }
          >
            <View
              pointerEvents="box-none"
              style={
                Object {
                  "flex": 1,
                  "marginTop": 64,
                }
              }
            >
              <View
                collapsable={false}
                onGestureHandlerEvent={[Function]}
                onGestureHandlerStateChange={[Function]}
                style={
                  Object {
                    "flex": 1,
                    "transform": Array [
                      Object {
                        "translateX": 0,
                      },
                      Object {
                        "translateX": 0,
                      },
                    ],
                  }
                }
              >
                <View
                  pointerEvents="none"
                  style={
                    Object {
                      "backgroundColor": "rgb(242, 242, 242)",
                      "bottom": 0,
                      "left": 0,
                      "position": "absolute",
                      "shadowColor": "#000",
                      "shadowOffset": Object {
                        "height": 1,
                        "width": -1,
                      },
                      "shadowOpacity": 0.3,
                      "shadowRadius": 5,
                      "top": 0,
                      "width": 3,
                    }
                  }
                />
                <View
                  style={
                    Array [
                      Object {
                        "flex": 1,
                        "overflow": "hidden",
                      },
                      Array [
                        Object {
                          "backgroundColor": "rgb(242, 242, 242)",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                        "flexDirection": "column-reverse",
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "flex": 1,
                        }
                      }
                    >
                      <View
                        style={
                          Object {
                            "alignItems": "center",
                            "backgroundColor": "white",
                            "flex": 1,
                          }
                        }
                      >
                        <RCTScrollView
                          contentContainerStyle={
                            Object {
                              "alignSelf": "center",
                            }
                          }
                          style={
                            Object {
                              "width": "100%",
                            }
                          }
                        >
                          <View>
                            <View
                              style={
                                Object {
                                  "alignItems": "center",
                                  "paddingTop": 20,
                                  "width": "80%",
                                }
                              }
                            >
                              <Text
                                style={
                                  Object {
                                    "color": "#3e4b57",
                                    "fontFamily": "tit-regular",
                                    "fontSize": 16,
                                    "opacity": 1,
                                    "textAlign": "center",
                                  }
                                }
                              >
                                The use of this application is not intended to be a substitute for professional medical advice, diagnosis, or treatment. Always seek the advice of your physician or other qualified health provider with any questions or queries you may have.
                              </Text>
                              <Text
                                style={
                                  Object {
                                    "color": "#3e4b57",
                                    "fontFamily": "tit-regular",
                                    "fontSize": 16,
                                    "opacity": 1,
                                    "textAlign": "center",
                                  }
                                }
                              />
                              <Text
                                style={
                                  Object {
                                    "color": "#3e4b57",
                                    "fontFamily": "tit-regular",
                                    "fontSize": 16,
                                    "opacity": 1,
                                    "textAlign": "center",
                                  }
                                }
                              >
                                Rinse your Luft™ thoroughly with warm water and a mild detergent after each use. Be sure to flush both ends of the device and any attachments that you may have used with clear water. Shake out any excess water and allow to air dry. DO NOT BOIL or HEAT. After allowing the device to dry completely, store the Luft™ for your next session.
                              </Text>
                              <Text
                                style={
                                  Object {
                                    "color": "#3e4b57",
                                    "fontFamily": "tit-regular",
                                    "fontSize": 16,
                                    "opacity": 1,
                                    "textAlign": "center",
                                  }
                                }
                              />
                              <Text
                                style={
                                  Object {
                                    "color": "#3e4b57",
                                    "fontFamily": "tit-regular",
                                    "fontSize": 16,
                                    "opacity": 1,
                                    "textAlign": "center",
                                  }
                                }
                              >
                                Note:
                              </Text>
                              <Text
                                style={
                                  Object {
                                    "color": "#3e4b57",
                                    "fontFamily": "tit-regular",
                                    "fontSize": 16,
                                    "opacity": 1,
                                    "textAlign": "center",
                                  }
                                }
                              >
                                For asthmatics, do not exhale using the Luft™ in the first week, rather breathe out normally. During the second week, exhale using the Luft™.
                              </Text>
                              <Text
                                style={
                                  Object {
                                    "color": "#3e4b57",
                                    "fontFamily": "tit-regular",
                                    "fontSize": 16,
                                    "opacity": 1,
                                    "textAlign": "center",
                                  }
                                }
                              />
                              <View
                                style={
                                  Object {
                                    "alignItems": "center",
                                  }
                                }
                              >
                                <View
                                  style={
                                    Object {
                                      "paddingTop": 10,
                                    }
                                  }
                                >
                                  <View
                                    accessible={true}
                                    focusable={true}
                                    isTVSelectable={true}
                                    onClick={[Function]}
                                    onResponderGrant={[Function]}
                                    onResponderMove={[Function]}
                                    onResponderRelease={[Function]}
                                    onResponderTerminate={[Function]}
                                    onResponderTerminationRequest={[Function]}
                                    onStartShouldSetResponder={[Function]}
                                    style={
                                      Object {
                                        "opacity": 1,
                                      }
                                    }
                                    testID="checkboxButton"
                                  >
                                    <View
                                      style={
                                        Object {
                                          "flexDirection": "row",
                                        }
                                      }
                                    >
                                      <View
                                        style={
                                          Object {
                                            "alignItems": "center",
                                            "justifyContent": "center",
                                          }
                                        }
                                      >
                                        <Text
                                          allowFontScaling={false}
                                          style={
                                            Array [
                                              Object {
                                                "color": "#CCC",
                                                "fontSize": 28,
                                              },
                                              Object {
                                                "opacity": 1,
                                              },
                                              Object {
                                                "fontFamily": "material-community",
                                                "fontStyle": "normal",
                                                "fontWeight": "normal",
                                              },
                                              Object {},
                                            ]
                                          }
                                        >
                                          
                                        </Text>
                                        <View
                                          style={
                                            Object {
                                              "position": "absolute",
                                              "transform": Array [
                                                Object {
                                                  "scale": 0.01,
                                                },
                                              ],
                                            }
                                          }
                                        >
                                          <Text
                                            allowFontScaling={false}
                                            style={
                                              Array [
                                                Object {
                                                  "color": "#3e4b57",
                                                  "fontSize": 16,
                                                },
                                                Object {
                                                  "opacity": 1,
                                                },
                                                Object {
                                                  "fontFamily": "material-community",
                                                  "fontStyle": "normal",
                                                  "fontWeight": "normal",
                                                },
                                                Object {},
                                              ]
                                            }
                                          >
                                            ﹮
                                          </Text>
                                        </View>
                                      </View>
                                      <View
                                        style={
                                          Object {
                                            "justifyContent": "center",
                                            "paddingLeft": 10,
                                          }
                                        }
                                      >
                                        <Text
                                          style={
                                            Object {
                                              "color": "#3e4b57",
                                              "fontFamily": "tit-light",
                                              "fontSize": 16,
                                              "opacity": 1,
                                              "paddingBottom": 2,
                                            }
                                          }
                                        >
                                          Don't show me again
                                        </Text>
                                      </View>
                                    </View>
                                  </View>
                                </View>
                                <View
                                  style={
                                    Object {
                                      "paddingBottom": 30,
                                      "paddingTop": 10,
                                    }
                                  }
                                >
                                  <View
                                    accessible={true}
                                    focusable={true}
                                    isTVSelectable={true}
                                    onClick={[Function]}
                                    onResponderGrant={[Function]}
                                    onResponderMove={[Function]}
                                    onResponderRelease={[Function]}
                                    onResponderTerminate={[Function]}
                                    onResponderTerminationRequest={[Function]}
                                    onStartShouldSetResponder={[Function]}
                                    style={
                                      Object {
                                        "opacity": 1,
                                      }
                                    }
                                  >
                                    <View
                                      style={
                                        Object {
                                          "backgroundColor": "white",
                                          "borderColor": "#CCC",
                                          "borderRadius": 8,
                                          "borderWidth": 1,
                                          "justifyContent": "center",
                                          "paddingHorizontal": 14,
                                          "paddingVertical": 8,
                                          "shadowColor": "#000",
                                          "shadowOffset": Object {
                                            "height": 2,
                                            "width": 0,
                                          },
                                          "shadowOpacity": 0.25,
                                          "shadowRadius": 2.84,
                                          "width": 100,
                                        }
                                      }
                                    >
                                      <Text
                                        style={
                                          Object {
                                            "color": "#3e4b57",
                                            "fontFamily": "tit-regular",
                                            "fontSize": 14,
                                            "opacity": 1,
                                            "textAlign": "center",
                                            "textTransform": "uppercase",
                                          }
                                        }
                                      >
                                        Agree
                                      </Text>
                                    </View>
                                  </View>
                                </View>
                              </View>
                            </View>
                          </View>
                        </RCTScrollView>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        pointerEvents="box-none"
        style={
          Object {
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          accessibilityElementsHidden={false}
          importantForAccessibility="auto"
          onLayout={[Function]}
          pointerEvents="box-none"
          style={null}
        >
          <View
            pointerEvents="none"
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#005bbb",
                  "borderBottomColor": "#CCC",
                  "borderBottomWidth": 1,
                  "flex": 1,
                  "shadowColor": "transparent",
                  "shadowOffset": 0,
                  "shadowOpacity": 0,
                  "shadowRadius": 0,
                }
              }
            />
          </View>
          <View
            pointerEvents="box-none"
            style={
              Object {
                "height": 64,
                "maxHeight": undefined,
                "minHeight": undefined,
                "opacity": undefined,
                "transform": undefined,
              }
            }
          >
            <View
              pointerEvents="none"
              style={
                Object {
                  "height": 20,
                }
              }
            />
            <View
              pointerEvents="box-none"
              style={
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                  "justifyContent": "center",
                }
              }
            >
              <View
                pointerEvents="box-none"
                style={
                  Object {
                    "marginHorizontal": 16,
                    "opacity": 1,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "alignSelf": "center",
                      "backgroundColor": "white",
                      "color": "#005bbb",
                      "fontFamily": "tit-regular",
                      "fontSize": 20,
                      "opacity": 1,
                    }
                  }
                >
                  Disclaimer
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </RNCSafeAreaView>
  </View>
</View>
`;
